--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="my_profit">我的收益</string>
     <string name="my_shop">我的店铺</string>
     <string name="order_manage">订单管理</string>
+    <string name="me">个人中心</string>
     <string name="setting">设置</string>
     <string name="invite_friend">邀请好友</string>
 
@@ -51,7 +52,7 @@
     <string name="setting_title">设置</string>
     <string name="setting_about_xmb">关于共享购</string>
     <string name="setting_clear_cache">清除缓存</string>
-    <string name="setting_contact_us">联系我们&#160;&#160;&#160;&#160;400-136-7282</string>
+    <string name="setting_contact_us">联系我们&#160;&#160;&#160;&#160;010-85170751</string>
     <string name="setting_current_version">当前版本</string>
     <string name="setting_logout">退出登录</string>
 
